Add tests for Virtual CPU attribute in Flavor json